[package]
name = "gyroflow-ofx"
version = "1.0.10"
authors = ["Ilya Epifanov <elijah.epifanov@gmail.com>", "Adrian <adrian.eddy@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2021"
description = "Gyroflow OpenFX plugin"

[lib]
name = "gyroflow_ofx"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
ofx = "0.3"
log = "0.4"
itertools = "0.11"
lru = "0.12"
gyroflow-core = { git = "https://github.com/gyroflow/gyroflow.git", default-features = false, rev = "838f1d2", features = ["bundle-lens-profiles"] }
#gyroflow-core = { path = "../gyroflow/src/core", default-features = false, features = ["bundle-lens-profiles"] }
log-panics = "2.1"
rfd = "0.12"
parking_lot = "0.12"
lazy_static = "1.4.0"
fastrand = "2.0.1"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies.metal]
version = "0.26.0"

[features]
default = ["use-opencl"]
use-opencl = ["gyroflow-core/use-opencl"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 2

[patch.crates-io]
ofx = { git = "https://github.com/AdrianEddy/ofx-rs.git", rev = "3370dc4" }
ofx_sys = { git = "https://github.com/AdrianEddy/ofx-rs.git", rev = "3370dc4" }
#ofx = { path = "../ofx-rs/ofx" }
#ofx_sys = { path = "../ofx-rs/ofx-sys" }
metal = { git = "https://github.com/gfx-rs/metal-rs/", rev = "d24f1a4" }
