[package]
name = "gyroflow-ofx"
version = "1.3.0"
authors = ["Ilya Epifanov <elijah.epifanov@gmail.com>", "Adrian <adrian.eddy@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2021"
description = "Gyroflow OpenFX plugin"

[lib]
name = "gyroflow_ofx"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
ofx = "0.3"
log = "0.4"
itertools = "0.13"
lru = "0.12"
gyroflow-core = { git = "https://github.com/gyroflow/gyroflow.git", default-features = false, rev = "b99ffea", features = ["bundle-lens-profiles"] }
#gyroflow-core = { path = "../gyroflow/src/core", default-features = false, features = ["bundle-lens-profiles"] }
log-panics = "2.1"
rfd = { version = "0.14", default-features = false, features = ["xdg-portal", "async-std"] }
parking_lot = "0.12"
lazy_static = "1.4.0"
fastrand = "2.1.0"
simplelog = { git = "https://github.com/Drakulix/simplelog.rs.git", rev = "4ef071d" }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies.metal]
version = "0.28.0"

[features]
default = ["use-opencl"]
use-opencl = ["gyroflow-core/use-opencl"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 2

[patch.crates-io]
ofx = { git = "https://github.com/AdrianEddy/ofx-rs.git", rev = "9f96aa7" }
ofx_sys = { git = "https://github.com/AdrianEddy/ofx-rs.git", rev = "9f96aa7" }
#ofx = { path = "../ofx-rs/ofx" }
#ofx_sys = { path = "../ofx-rs/ofx-sys" }
